Updated the SASS file structure and included short notes on what the different SASS directories should contain

--- a/resources/themes/STARTERTHEME/sass/_variables.scss
+++ b/resources/themes/STARTERTHEME/sass/_variables.scss
@@ -1,3 +1,7 @@
+/**
+ * @file
+ * Variables containing values that is being used multiple places.
+ */
 
 $primary-color: '#333333';
 $secondary-color: '#666666';
