Colors are not strings

--- a/resources/themes/STARTERTHEME/sass/_variables.scss
+++ b/resources/themes/STARTERTHEME/sass/_variables.scss
@@ -3,8 +3,8 @@
  * Variables containing values that is being used multiple places.
  */
 
-$primary-color: '#333333';
-$secondary-color: '#666666';
+$primary-color: #333333;
+$secondary-color: #666666;
 
 $primary-font-stack: "Verdana, sans-serif";
 $secondary-font-stack: "Georgia, serif";
